tests/baselines/reference/classStaticBlock4(target=es2022).errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlock4.ts(8,14): error TS2729: Property 's2' is used before its initialization.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock4.ts(9,11): error TS2729: Property 's2' is used before its initialization.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock4.ts (2 errors) ====
    class C {
        static s1 = 1;
    
        static {
            this.s1;
            C.s1;
    
            this.s2;
                 ~~
!!! error TS2729: Property 's2' is used before its initialization.
!!! related TS2728 tests/cases/conformance/classes/classStaticBlock/classStaticBlock4.ts:12:12: 's2' is declared here.
            C.s2;
              ~~
!!! error TS2729: Property 's2' is used before its initialization.
!!! related TS2728 tests/cases/conformance/classes/classStaticBlock/classStaticBlock4.ts:12:12: 's2' is declared here.
        }
    
        static s2 = 2;
        static ss2 = this.s1;
    }
    